# FindJobs

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  THIRD_PARTY_LICENSES.md  alembic.ini  pyproject.toml
config/: keyword_rules.yaml  market_taxonomy.yaml  sources.yaml
docs/: claude-code-status.md  parallel-adapter-tasks.md
migrations/: env.py
migrations/versions/: 0001_baseline.py  0002_add_job_fields_and_mark_constraint.py  0003_add_detail_completeness.py
profile/: profile.example.md
src/findjobs/: analysis.py  classify.py  cli.py  collection.py  config.py  db.py  detail_backfill.py  exporter.py  job_details.py  job_types.py  keyword_analysis.py  locations.py  maintenance.py  market_analysis.py  models.py  paths.py  profile_import.py  recommendation.py  recommendation_output.py  recommendation_profile.py  relevance_audit.py  repository.py  salary.py  web.py  weekly_recommendation.py  weekly_runtime.py
src/findjobs/adapters/: __init__.py  alibaba.py  alibaba_group.py  antgroup.py  baidu.py  base.py  bytedance.py  jd.py  (+16 more)
tests/: test_adapter_chaitin.py  test_adapter_qianxin.py  test_adapter_quality_gates.py  test_adapter_sangfor.py  test_adapter_stepfun.py  test_adapter_topsec.py  test_ai_workflow_boundary.py  test_claude_environment.py  test_detail_backfill.py  test_export_details.py  test_job_details.py  test_job_lifecycle.py  test_keyword_analysis.py  test_live_collect.py  test_market_analysis.py  test_market_analysis_cli.py  test_market_web.py  test_migrations.py  test_phase1.py  test_phase2.py  test_phase2a.py  test_phase2c.py  test_phase3.py  test_phase3_new_sources.py  test_phase4.py  test_phase5.py  test_profile_import.py  test_reclassification.py  test_recommendation.py  test_recommendation_cli.py  test_recommendation_profile.py  test_recommendations_web.py  test_relevance_audit.py  test_relevance_golden.py  test_weekly_runtime.py
tools/: diagnose_claude_env.ps1  generate_relevance_golden.py  run_claude_edit_smoke.ps1  run_recommendation_claude.cmd  run_weekly_claude.cmd  run_weekly_opencode.cmd
workflows/: adapter_repair.md  career_advice.md  match_analysis.md  priority_ranking.md  weekly_summary.md
(+30 files in other folders)
