[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "findjobs"
version = "0.1.0"
description = "A local job collection app"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "jinja2",
    "python-multipart",
    "sqlalchemy",
    "pydantic",
    "pydantic-settings",
    "pyyaml",
    "httpx",
    "playwright",
    "typer",
    "rich",
    "cryptography>=49.0.0",
]

[project.scripts]
findjobs = "findjobs.cli:app"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
findjobs = ["templates/*", "static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated; install `httpx2` instead:::",
]
